# excat-license-tool

./: CA.tar  Makefile.aix32  Makefile.aix64  Makefile.am  Makefile.hp32  Makefile.hp64  Makefile.ia32  Makefile.ia64  Makefile.in  Makefile.soamd64  README.md  cacert.hex  certificate.c  certificate.h  configure.in  der2hex.c  der2hex.pl  jp_co_ipride_License.h  license.c  license.spec.in  license_int.h  mkcacert.sh  mkcerts.pl  version.c  version.h
CA/: acacert.pem  cacert.pem  index.txt  index.txt.old
CA/newcerts/: 01.pem  02.pem  03.pem
CA/private/: acakey.pem  c2key.pem  c3key.pem  cakey.pem
java/: License.java  MANIFEST.MF  Makefile.in  jp_co_ipride_License.c
sample/: Checker.java  Checker.sh  Checker.sh.in  Makefile.in  checker.c
test/: Makefile.in  test-c++.C  test-cert.c  test-java.sh  test-main.c  test-main.sh  test-ver.c
